# warehouse_management

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
domain/: models.py  repositories.py  services.py  unit_of_work.py
infrastructure/: orm.py  repositories.py  unit_of_work.py
tests/test_domain/: test_services.py
tests/test_infrastructure/: test_orm.py
