[tool.poetry]
name = "warehouse-management"
version = "0.1.0"
description = "Clean Warehouse homework"
authors = ["trifonovtema <artyom85@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mypy = "^1.14.1"
flake8 = "^7.1.1"
pytest = "^8.3.4"
black = "^24.10.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
log_cli = true
log_cli_level = "INFO"

[tool.pre-commit]
hook-config = ".pre-commit-config.yaml"

[tool.mypy]
mypy_path = "app"
cache_dir = "/dev/null"